--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -182,4 +182,4 @@ jobs:
         run: terraform init
 
       - name: Terraform Destroy
-        run: terraform destroy -auto-approve -var-file="terraform.tfvars"
+        run: terraform destroy -auto-approve
